[package]
name = "simple-rust-web-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"

[[bin]]
name = "simple-rust-web-server"
path = "main.rs"
